Añadido al package.json el nuevo plugin y creado plugin de linea de comando iaas

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ssh": "./ssh pull-iaas"
   },
   "bin": {
-    "gitbook-start": "./bin/linea-comando-npm.js"
+    "linea-comando-npm": "./bin/linea-comando-npm.js",
+    "gitbook-start-iaas": "./bin/linea-comando-iaas.js"
   },
   "repository": {
     "type": "git",
