--- a/template-iaas/directorio_a_crear/package.json
+++ b/template-iaas/directorio_a_crear/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gitbook-start-team-noejaco2017",
-  "version": "1.1.0",
-  "description": "Despliegue en Heroku e Iaas",
+  "name": "gitbook-iaas ",
+  "version": " 0.0.1 ",
+"description": "Creacion de un paquete npm",
   "main": "./bin/linea-comando-npm.js",
   "scripts": {
     "generate-gitbook": "./scripts/losh generate-gitbook",
@@ -11,8 +11,7 @@
     "deploy-wiki": "./scripts/losh deploy-wiki",
     "deploy": "npm run build && npm run deploy-gitbook && npm run deploy-wiki",
     "version": "./scripts/losh version",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "ssh": "./ssh pull-iaas"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
     "gitbook-start": "./bin/linea-comando-npm.js",
@@ -22,6 +21,11 @@
     "type": "git",
     "url": "git@github.com:ULL-ESIT-SYTW-1617/nueva-funcionalidad-para-el-paquete-npm-plugins-noejaco2017.git",
     "wiki": "https://github.com/ULL-ESIT-SYTW-1617/nueva-funcionalidad-para-el-paquete-npm-plugins-noejaco2017.wiki.git"
+  },
+  "repository-ull": {
+    "type": "git",
+    "iaas-IP": "172.42.2.3",
+    "iaas-path": "/src/chuchu"
   },
   "keywords": [
     "gitbook",
@@ -45,41 +49,16 @@
   "homepage": "creacion-de-paquetes-y-modulos-en-nodejs-noejaco2017/README.md",
   "devDependencies": {
     "async": "^1.4.0",
-    "child_process": "^1.0.2",
-    "ejs": "^2.5.2",
-    "express": "^4.14.0",
-    "fs": "0.0.1-security",
-    "fs-extra": "^0.22.1",
-    "gh-pages": "^0.3.1",
-    "gitbook": "^2.1.0",
-    "gitbook-cli": "^0.3.4",
-    "gulp": "~3.9.1",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-shell": "~0.5.2",
-    "minimist": "^1.2.0",
-    "path": "^0.12.7",
-    "underscore": "^1.8.3"
-  },
-  "dependencies": {
-    "async": "^1.4.0",
-    "child_process": "^1.0.2",
-    "ejs": "^2.5.2",
-    "express": "^4.14.0",
-    "fs": "0.0.1-security",
     "fs-extra": "^0.22.1",
     "gh-pages": "^0.3.1",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
     "gulp": "^3.9.1",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-run": "^1.7.1",
     "gulp-shell": "^0.5.2",
-    "minimist": "^1.2.0",
-    "path": "^0.12.7",
-    "underscore": "^1.8.3",
-    "gulp-install": "~0.6.0"
+    "minimist": "^1.2.0"
   },
-  "engines": {
-    "node": "0.10.x"
+  "dependencies": {
+    "ejs": "^2.5.2",
+    "underscore": "^1.8.3"
   }
 }
