--- a/template-iaas/directorio_a_crear/package.json
+++ b/template-iaas/directorio_a_crear/package.json
@@ -14,7 +14,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "gitbook-start": "./bin/linea-comando-npm.js",
     "gitbook-start-iaas": "./bin/linea-comando-iaas.js"
   },
   "repository": {
@@ -24,8 +23,8 @@
   },
   "repository-ull": {
     "type": "git",
-    "iaas-IP": "172.42.2.3",
-    "iaas-path": "/src/chuchu"
+    "iaas-IP": "10.6.128.18",
+    "iaas-path": "/home/usuario/sytw/prueba"
   },
   "keywords": [
     "gitbook",
