--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gitbook-start-team-noejaco2017",
+  "name": "gitbook-start-team-noejaco2017-1.0",
   "version": "0.0.10",
-  "description": "Despliegue en Heroku e Iaas",
+  "description": "Despliegue con pluign Iaas",
   "main": "./bin/linea-comando-npm.js",
   "scripts": {
     "generate-gitbook": "./scripts/losh generate-gitbook",
@@ -53,7 +53,8 @@
     "git-url-parse": "^6.0.7",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
-    "gitbook-start-plugin-iaas-ull-es-noejaco2017": "*",
+    "gitbook-start-plugin-iaas-ull-es-noejaco2017": "0.0.37",
+    "gitbook-start-team-noejaco2017": "^1.1.1",
     "gulp": "~3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-shell": "~0.5.2",
