--- a/caca/package.json
+++ b/caca/package.json
@@ -1,28 +1,40 @@
 {
-  "name": "gitbook-start-plugin-iaas-ull-es-noejaco2017",
-  "version": "0.0.49",
-  "description": "Despliegue plugin Iaas",
-  "main": "linea-comando-iaas.js",
+  "name": "  ",
+  "version": "  ",
+"description": "Creacion de un paquete npm",
+  "main": "./bin/linea-comando-npm.js",
   "scripts": {
+    "generate-gitbook": "./scripts/losh generate-gitbook",
+    "generate-wiki": "./scripts/losh generate-wiki",
+    "build": "npm install && npm i gitbook-cli && npm run generate-gitbook && npm run generate-wiki",
+    "deploy-gitbook": "./scripts/losh deploy-gitbook",
+    "deploy-wiki": "./scripts/losh deploy-wiki",
+    "deploy": "npm run build && npm run deploy-gitbook && npm run deploy-wiki",
+    "version": "./scripts/losh version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "gitbook-start-iaas": "linea-comando-iaas.js"
+    "linea-comando-npm": "./bin/linea-comando-npm.js"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:ULL-ESIT-SYTW-1617/nueva-funcionalidad-para-el-paquete-npm-plugins-noejaco2017.git",
-    "wiki": "https://github.com/ULL-ESIT-SYTW-1617/nueva-funcionalidad-para-el-paquete-npm-plugins-noejaco2017.wiki.git"
+    "url": "",
+    "wiki": ""
   },
+  "iaas":{
+    "IP": "10.6.128.18",
+    "PATH": "./MyPath"
+  },
+
   "keywords": [
     "gitbook",
     "boilerplate",
     "starter"
   ],
   "author": {
-    "name": "alu0100622492",
-    "email": "alu0100622492@ull.edu.es",
-    "url": "http://dsi1516.github.io/Practica1/"
+    "name": "",
+    "email": "",
+    "url": ""
   },
   "contributors": {
     "name": "alu0100836059",
@@ -42,13 +54,16 @@
     "fs": "0.0.1-security",
     "fs-extra": "^0.22.1",
     "gh-pages": "^0.3.1",
+    "git-url-parse": "^6.0.7",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
+    "gitbook-start-plugin-iaas-ull-es-noejaco2017": "*",
     "gulp": "~3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-shell": "~0.5.2",
     "minimist": "^1.2.0",
     "path": "^0.12.7",
+    "simple-git": "^1.51.0",
     "ssh-exec": "^2.0.0",
     "underscore": "^1.8.3"
   },
@@ -59,9 +74,6 @@
     "express": "^4.14.0",
     "fs": "0.0.1-security",
     "fs-extra": "^0.22.1",
-    "gitbook-start-team-noejaco2017":"1.1.1",
-    "fs-extended": "^0.2.1",
-    "git-url-parse": "^6.0.7",
     "gh-pages": "^0.3.1",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
@@ -73,11 +85,8 @@
     "gulp-shell": "^0.5.2",
     "minimatch": "^3.0.3",
     "minimist": "^1.2.0",
-    "simple-git": "^1.51.0",
     "path": "^0.12.7",
-    "underscore": "^1.8.3"
-  },
-  "engines": {
-    "node": "0.10.x"
+    "underscore": "^1.8.3",
+    "ssh-exec": "^2.0.0"
   }
 }
