Creada estructura para adaptar el plugin heroku

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gitbook-start-team-noejaco2017-1.0",
-  "version": "0.0.11",
+  "name": "gitbook-start-team-noejaco2017-2.0",
+  "version": "0.0.1",
   "description": "Despliegue con pluign Iaas",
   "main": "./bin/linea-comando-npm.js",
   "scripts": {
@@ -53,8 +53,9 @@
     "git-url-parse": "^6.0.7",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
-    "gitbook-start-plugin-iaas-ull-es-noejaco2017": "0.0.50",
-    "gitbook-start-team-noejaco2017": "^1.1.1",
+    "gitbook-start-plugin-heroku-noejaco2017": "*",
+    "gitbook-start-plugin-iaas-ull-es-noejaco2017": "*",
+    "gitbook-start-team-noejaco2017": "*",
     "gulp": "~3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-shell": "~0.5.2",
