--- a/liante/package.json
+++ b/liante/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gitbook-start-team-noejaco2017-2.0",
+  "name": "yoli",
   "version": "0.0.1",
-  "description": "Despliegue con pluign Iaas",
+"description": "Creacion de un paquete npm",
   "main": "./bin/linea-comando-npm.js",
   "scripts": {
     "generate-gitbook": "./scripts/losh generate-gitbook",
@@ -11,16 +11,22 @@
     "deploy-wiki": "./scripts/losh deploy-wiki",
     "deploy": "npm run build && npm run deploy-gitbook && npm run deploy-wiki",
     "version": "./scripts/losh version",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "ssh": "./ssh pull-iaas"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "gitbook-start": "./bin/linea-comando-npm.js"
+    "linea-comando-npm": "./bin/linea-comando-npm.js"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:ULL-ESIT-SYTW-1617/nueva-funcionalidad-para-el-paquete-npm-plugins-noejaco2017.git",
-    "wiki": "https://github.com/ULL-ESIT-SYTW-1617/nueva-funcionalidad-para-el-paquete-npm-plugins-noejaco2017.wiki.git"
+    "url": "",
+    "wiki": ""
+  },
+  "iaas":{
+    "IP": "",
+    "PATH": ""
+  },
+  "heroku":{
+    "IP": "api.com"
   },
   "keywords": [
     "gitbook",
@@ -28,14 +34,9 @@
     "starter"
   ],
   "author": {
-    "name": "alu0100622492",
-    "email": "alu0100622492@ull.edu.es",
-    "url": "http://dsi1516.github.io/Practica1/"
-  },
-  "contributors": {
-    "name": "alu0100836059",
-    "email": "alu0100836059@ull.edu.es",
-    "url": "http://dsi1516.github.io/Practica1/"
+    "name": "yoli",
+    "email": "",
+    "url": ""
   },
   "license": "MIT",
   "bugs": {
@@ -54,7 +55,6 @@
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
     "gitbook-start-plugin-iaas-ull-es-noejaco2017": "*",
-    "gitbook-start-team-noejaco2017-2.0": "*",
     "gulp": "~3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-shell": "~0.5.2",
@@ -67,7 +67,7 @@
   "dependencies": {
     "async": "^1.4.0",
     "child_process": "^1.0.2",
-    "ejs": "*",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
     "fs": "0.0.1-security",
     "fs-extra": "^0.22.1",
@@ -85,8 +85,5 @@
     "path": "^0.12.7",
     "underscore": "^1.8.3",
     "ssh-exec": "^2.0.0"
-  },
-  "engines": {
-    "node": "0.10.x"
   }
 }
