--- a/package.json
+++ b/package.json
@@ -64,7 +64,13 @@
     "path": "^0.12.7",
     "simple-git": "^1.51.0",
     "ssh-exec": "^2.0.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "body-parser": "^1.13.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.3.5",
+    "express-session": "^1.11.3",
+    "passport": "^0.2.2",
+    "passport-github": "^1.1.0"
   },
   "dependencies": {
     "async": "^1.4.0",
@@ -87,7 +93,13 @@
     "minimist": "^1.2.0",
     "path": "^0.12.7",
     "ssh-exec": "^2.0.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "body-parser": "^1.13.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.3.5",
+    "express-session": "^1.11.3",
+    "passport": "^0.2.2",
+    "passport-github": "^1.1.0"
   },
   "engines": {
     "node": "0.10.x"
