--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
     "cookie-parser": "^1.3.5",
     "express-session": "^1.11.3",
     "passport": "^0.2.2",
-    "passport-github": "^1.1.0"
+    "passport-github": "^1.1.0",
+    "passport-facebook": "~2.1.1"
   },
   "engines": {
     "node": "0.10.x"
