--- a/package.json
+++ b/package.json
@@ -74,9 +74,13 @@
   },
   "dependencies": {
     "async": "^1.4.0",
+    "body-parser": "^1.13.2",
     "child_process": "^1.0.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.3.5",
     "ejs": "*",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "fs": "0.0.1-security",
     "fs-extra": "^0.22.1",
     "gh-pages": "^0.3.1",
@@ -91,16 +95,12 @@
     "inquirer": "^1.2.2",
     "minimatch": "^3.0.3",
     "minimist": "^1.2.0",
+    "passport": "^0.2.2",
+    "passport-facebook": "~2.1.1",
+    "passport-github": "^1.1.0",
     "path": "^0.12.7",
     "ssh-exec": "^2.0.0",
-    "underscore": "^1.8.3",
-    "body-parser": "^1.13.2",
-    "connect-ensure-login": "^0.1.1",
-    "cookie-parser": "^1.3.5",
-    "express-session": "^1.11.3",
-    "passport": "^0.2.2",
-    "passport-github": "^1.1.0",
-    "passport-facebook": "~2.1.1"
+    "underscore": "^1.8.3"
   },
   "engines": {
     "node": "0.10.x"
