--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "cookie-parser": "^1.3.5",
     "ejs": "*",
     "express": "^4.14.0",
+    "express-ejs-layouts": "^2.2.0",
     "express-session": "^1.14.2",
     "fs": "0.0.1-security",
     "fs-extra": "^0.22.1",
@@ -99,6 +100,7 @@
     "passport-facebook": "~2.1.1",
     "passport-github": "^1.1.0",
     "path": "^0.12.7",
+    "serve-static": "^1.11.1",
     "ssh-exec": "^2.0.0",
     "underscore": "^1.8.3"
   },
