--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:ULL-ESIT-SYTW-1617/nueva-funcionalidad-para-el-paquete-npm-plugins-noejaco2017.git",
-    "wiki": "https://github.com/ULL-ESIT-SYTW-1617/nueva-funcionalidad-para-el-paquete-npm-plugins-noejaco2017.wiki.git"
+    "url": "https://github.com/alu0100836059/Apuntes_SYTW.git",
+    "wiki": "https://github.com/alu0100836059/Apuntes_SYTW.wiki.git"
   },
   "keywords": [
     "gitbook",
