--- a/package.json
+++ b/package.json
@@ -44,9 +44,13 @@
   "homepage": "creacion-de-paquetes-y-modulos-en-nodejs-noejaco2017/README.md",
   "devDependencies": {
     "async": "^1.4.0",
+    "body-parser": "^1.13.2",
     "child_process": "^1.0.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.3.5",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "express-session": "^1.11.3",
     "fs": "0.0.1-security",
     "fs-extra": "^0.22.1",
     "gh-pages": "^0.3.1",
@@ -60,17 +64,14 @@
     "gulp-gh-pages": "^0.5.4",
     "gulp-shell": "~0.5.2",
     "minimist": "^1.2.0",
+    "mongoose": "^4.6.8",
     "octonode": "^0.7.6",
+    "passport": "^0.2.2",
+    "passport-github": "^1.1.0",
     "path": "^0.12.7",
     "simple-git": "^1.51.0",
     "ssh-exec": "^2.0.0",
-    "underscore": "^1.8.3",
-    "body-parser": "^1.13.2",
-    "connect-ensure-login": "^0.1.1",
-    "cookie-parser": "^1.3.5",
-    "express-session": "^1.11.3",
-    "passport": "^0.2.2",
-    "passport-github": "^1.1.0"
+    "underscore": "^1.8.3"
   },
   "dependencies": {
     "async": "^1.4.0",
@@ -100,6 +101,7 @@
     "minimatch": "^3.0.3",
     "minimist": "^1.2.0",
     "mongodb": "^2.2.11",
+    "mongoose": "^4.6.8",
     "passport": "^0.2.2",
     "passport-dropbox": "^2.0.0",
     "passport-facebook": "~2.1.1",
