--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ build/Release
 
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
-node_modules
+node_modules/
 
 # Optional npm cache directory
 .npm
@@ -34,4 +34,4 @@ node_modules
 # Optional REPL history
 .node_repl_history
 
-gh-pages
+./publish
