Removiendo viejo bin y adecuado package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gitbook-start-team-noejaco2017-4.0",
+  "name": "gitbook-start-mongo",
   "version": "0.0.9",
   "description": "Despliegue con pluign Iaas",
-  "main": "./bin/linea-comando-npm.js",
+  "main": "gitbook-start-mongo.js",
   "scripts": {
     "generate-gitbook": "./scripts/losh generate-gitbook",
     "generate-wiki": "./scripts/losh generate-wiki",
@@ -15,11 +15,11 @@
     "ssh": "./ssh pull-iaas"
   },
   "bin": {
-    "gitbook-start": "./bin/linea-comando-npm.js"
+    "gitbook-start-mongo": "gitbook-start-mongo.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/alu0100836059/Apuntes_SYTW.git",
+    "url": "https://github.com/ULL-ESIT-SYTW-1617/practica-localstrategy-y-base-de-datos-noejaco2017.git",
     "wiki": "https://github.com/alu0100836059/Apuntes_SYTW.wiki.git"
   },
   "keywords": [
