--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gitbook-start-mongo-noejaco",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "LocalStrategy y base de datos MongoDB",
   "main": "gitbook-start-mongo.js",
   "scripts": {
@@ -44,44 +44,6 @@
   },
   "homepage": "https://github.com/ULL-ESIT-SYTW-1617/practica-localstrategy-y-base-de-datos-noejaco2017.git#readme",
   "devDependencies": {
-    "async": "^1.4.0",
-    "body-parser": "^1.13.2",
-    "child_process": "^1.0.2",
-    "connect-ensure-login": "^0.1.1",
-    "cookie-parser": "^1.3.5",
-    "ejs": "^2.5.2",
-    "express": "^4.14.0",
-    "express-ejs-layouts": "^2.2.0",
-    "express-session": "^1.11.3",
-    "fs": "0.0.1-security",
-    "fs-extra": "^1.0.0",
-    "gh-pages": "^0.3.1",
-    "git-url-parse": "^6.0.7",
-    "gitbook": "^2.1.0",
-    "gitbook-cli": "^0.3.4",
-    "gitbook-cli": "^0.3.4",
-    "graceful-fs": "^4.1.0",
-    "gulp": "~3.9.1",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-shell": "~0.5.2",
-    "gulp-install": "~0.6.0",
-    "gulp-run": "^1.7.1",
-    "heroku-client": "^3.0.0-beta3",
-    "inquirer": "^1.2.2",
-    "minimatch": "^3.0.3",
-    "minimist": "^1.2.0",
-    "mongoose": "^4.6.8",
-    "morgan": "^1.7.0",
-    "octonode": "^0.7.6",
-    "passport": "^0.2.2",
-    "passport-github": "^1.1.0",
-    "path": "^0.12.7",
-    "prompt": "^1.0.0",
-    "simple-git": "^1.51.0",
-    "serve-static": "^1.11.1",
-    "ssh-exec": "^2.0.0",
-    "underscore": "^1.8.3",
-    "url": "^0.11.0"
   },
   "dependencies": {
     "async": "^1.4.0",
@@ -101,6 +63,9 @@
     "gh-pages": "^0.3.1",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
+    "gitbook-start-plugin-heroku-noejaco2017": "0.0.36",
+    "gitbook-start-plugin-iaas-ull-es-noejaco2017": "*",
+    "gitbook-start-team-noejaco2017-2.0": "*",
     "graceful-fs": "^4.1.0",
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
