--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "url": "https://github.com/ULL-ESIT-SYTW-1617/practica-localstrategy-y-base-de-datos-noejaco2017/issues"
   },
   "homepage": "https://github.com/ULL-ESIT-SYTW-1617/practica-localstrategy-y-base-de-datos-noejaco2017.git#readme",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "async": "^1.4.0",
     "bcrypt-nodejs": "0.0.3",
@@ -77,7 +76,7 @@
     "minimatch": "^3.0.3",
     "minimist": "^1.2.0",
     "mongodb": "^2.2.11",
-    "mongoose": "^4.6.8",
+    "mongoose": "^4.7.6",
     "passport": "^0.2.2",
     "passport-dropbox": "^2.0.0",
     "passport-facebook": "~2.1.1",
@@ -85,8 +84,8 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "prompt": "^1.0.0",
-    "simple-git": "^1.51.0",
     "serve-static": "^1.11.1",
+    "simple-git": "^1.51.0",
     "ssh-exec": "^2.0.0",
     "underscore": "^1.8.3",
     "url": "^0.11.0"
